<resources>
    <string name="hint_search_text">Search</string>
    <string name="select_note">Select note</string>
    <string name="hint_note_text">Text</string>
    <string name="delete_from_trash">Delete</string>
    <string name="example_text_for_font" translatable="false">ABCDabcd\n12345678</string>
    <string name="templars">The Templars are a spiritual and knightly order
        founded in the HolyLand in 1119 by a small group of knights,
        led by Hugh de Payens,after the First Crusade (1096-1099).</string>
    <string name="local">Local</string>
    <string name="cloud">Cloud</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="title_card_view">Hello, Word!</string>
    <string name="date_card_view">01/21/96 12:00 AM</string>
    <string name="feedback_by_email">Feedback</string>
    <string name="menu_backup_data">Settings account</string>
    <string name="menu_list_switch">Toggle view</string>
    <string name="menu_list_search">Search go</string>
    <string name="menu_list_select">Select notes</string>
    <string name="menu_list_combine">Combine notes</string>
    <string name="menu_list_favorite">Favorite</string>
    <string name="menu_navigation_note">Note</string>
    <string name="menu_navigation_favorites">Favorites</string>
    <string name="menu_navigation_trash">Trash</string>
    <string name="menu_navigation_settings">Settings</string>
    <string name="toast_auto_bp_completed">Auto backup completed!</string>
    <string name="toast_auto_bp_failed">Auto backup error!</string>
    <string name="toast_auto_bp_no_permissions">Auto backup is not possible! No permission!</string>
    <string name="toast_file_manager_not_found">Error. File manager not found!</string>
    <string name="toast_restore_list_empty">List is empty!</string>
    <string name="toast_email_client_not_found">Email client not found!</string>
    <string name="toast_impossible_share_note">Error! Impossible to share!</string>
    <string name="toast_web_client_not_found">Web client not found!</string>
    <string name="toast_phone_client_not_found">Phone client not found!</string>
    <string name="sb_note_restored">Note restored!</string>
    <string name="sb_combined_note_added">Combined note added!</string>
    <string name="sb_error_combining_notes">Error combining notes!</string>
    <string name="sb_but_empty_trash">But it was empty…</string>
    <string name="sb_select_one_note">You only need to select one note!</string>
    <string name="sb_note_is_empty">Error! The note is empty!</string>
    <string name="sb_note_create_text_files_completed">Save text file:
        /Notes Mini Backup/Text Files/</string>
    <string name="sb_note_create_text_file_failed">Failed to save text file!</string>
    <string name="sb_note_invalid_link">Invalid link!</string>
    <string name="sb_note_need_copy_text">You need to copy text!</string>
    <string name="sb_note_invalid_format">Invalid format!</string>
    <string name="sb_note_text_copied">Text copied!</string>
    <string name="sb_note_link_copied">Link copied!</string>
    <string name="sb_undo_note_deleted">Note deleted!</string>
    <string name="sb_undo_note_added_trash">Note added to trash!</string>
    <string name="sb_note_restore_in_trash">The note is in the trash!</string>
    <string name="sb_note_restore_action">Restore</string>
    <string name="sb_settings_unable_select_folder">Unable to select folder!</string>
    <string name="sb_settings_you_can_local_storage">You can select a folder only in the phone\'s
        local storage!</string>
    <string name="sb_bp_unable_created_folder">Unable to create a folder!</string>
    <string name="sb_bp_succes">Backup completed!</string>
    <string name="sb_bp_failure">Unable to backup database.
        Maybe a file with that name already exists!</string>
    <string name="sb_bp_restore_succes">Restore completed!</string>
    <string name="sb_bp_restore_failure">Unable to restore. Retry!</string>
    <string name="sb_bp_backup_files_deleted">Backup files have been deleted!</string>
    <string name="sb_bp_sign_in_failed">Sign in failed</string>
    <string name="sb_bp_logged_account">You are logged out of account</string>
    <string name="sb_bp_no_internet">No internet connection</string>
    <string name="sb_bp_delete_data_from_cloud">Your data has been deleted from the cloud!</string>
    <string name="sb_bp_backup_not_found">Backup file was not found. Maybe it
        hasn\'t been uploaded yet!</string>
    <string name="sb_bp_problem_internet">Problems with the internet connection!</string>
    <string name="sb_bp_backup_not_selected">A backup file was not selected!</string>
    <string name="sb_bp_invalid_format_file">Invalid file format!</string>
    <string name="sheet_reset_color_title">Reset the color?</string>
    <string name="sheet_reset_font_size_title">Reset the font size?</string>
    <string name="sheet_backup_title">Backup title</string>
    <string name="sheet_backup_text_hint">Title</string>
    <string name="sheet_backup_incorrect_name">Enter the correct title!</string>
    <string name="sheet_restore_db_title">Select file:</string>
    <string name="sheet_restore_db_delete_all_backups">Delete all</string>
    <string name="sheet_restore_db_folder_not_found">Notes Mini Backup folder was not found!</string>
    <string name="sheet_pref_color_hex_title">Enter a hex code</string>
    <string name="sheet_font_size_title">Font size</string>
    <string name="sheet_font_size_reset">Reset</string>
    <string name="sheet_pref_links_title">Type of hyperlink</string>
    <string name="sheet_pref_links_web_url">Web URL</string>
    <string name="sheet_pref_links_email">Email</string>
    <string name="sheet_pref_links_phone_number">Phone Number</string>
    <string name="sheet_account_title">Account management</string>
    <string name="sheet_account_data_delete">Delete all data</string>
    <string name="sheet_account_logout">Logout</string>
    <string name="sheet_account_warning">Warning! You will delete your data from the cloud
        and will not be able to restore it. Continue?</string>
    <string name="sheet_confirm_action">Confirm action</string>
    <string name="sheet_deleting_data">Deleting data</string>
    <string name="sheet_deleting_data_message">For security reasons, to delete data, you must log
        in to your account again.</string>
    <string name="bs_last_modified">Last modified: %1$s</string>
    <string name="bs_paste_text">Paste text</string>
    <string name="bs_copy_text">Copy text note</string>
    <string name="bs_share">Share</string>
    <string name="bs_download">Download</string>
    <string name="to_close">To close</string>
    <string name="sheet_pref_sorting_time_creation">By time of creation</string>
    <string name="sheet_pref_sorting_time_modification">By time of modification</string>
    <string name="sheet_delete_warnings">Confirm deletion?</string>
    <string name="sheet_about_app_development">Development and support: Loskon</string>
    <string name="sheet_about_version">Application version: %1$s</string>
    <string name="dg_trash_title">Clear trash?</string>
    <string name="dg_delete_forever_title">Delete selected notes\n definitively?</string>
    <string name="dg_unification_title">Unification this notes?</string>
    <string name="dg_unification_delete">Delete merged notes</string>
    <string name="dg_unification_leave">Leave merged notes</string>
    <string name="dg_open_link_open">Open</string>
    <string name="dg_open_link_call">Call</string>
    <string name="dg_open_link_send">Send</string>
    <string name="dg_open_link_invalid">Invalid link</string>
    <string name="dg_open_link_copy">Copy</string>
    <string name="dg_warning_title">Warning!</string>
    <string name="dg_warning_attention">Attention! The selected
        font may not support your language or some characters!</string>
    <string name="dg_add_new_note">Add new note</string>
    <string name="dg_add_to_created_note">Add to created note</string>
    <string name="settings_app_header">Appearance settings</string>
    <string name="data_header">Data</string>
    <string name="notes_header">Notes</string>
    <string name="other_header">Other</string>
    <string name="custom_app_title">Customisation</string>
    <string name="type_font_title">Type of font</string>
    <string name="sort_title">Sort</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="backup_title">Backup and restore</string>
    <string name="folder_title">Folder for data</string>
    <string name="auto_backup_title">Autobackup</string>
    <string name="notification_title">Notification</string>
    <string name="number_of_backup_title">Number of backups</string>
    <string name="update_date_title">Update datetime</string>
    <string name="font_size_notes_title">Font size</string>
    <string name="hyperlinks_title">Hyperlinks</string>
    <string name="retention_trash_title">Retention time of notes in trash</string>
    <string name="show_bottom_widget_title">Show the bottom widget</string>
    <string name="communication_title">Communication with developer</string>
    <string name="about_app_title">About application</string>
    <string name="auto_backup_summary">When creating several new notes</string>
    <string name="notification_auto_backup_summary">About successful autobackup</string>
    <string name="update_date_summary">When restoring notes from trash</string>
    <string name="show_bottom_widget_summary">When sending a note to the trash</string>
    <string name="number_of_days_summary">Number of days: %1$d</string>
    <string name="auto_backup_key">Auto backup</string>
    <string name="dark_mode_key">Dark mode</string>
    <string name="notification_key">Notification</string>
    <string name="update_date_key">update date key</string>
    <string name="show_bottom_widget_key">show bottom widget key</string>
    <string name="number_of_backup_key">Number of backups</string>
    <string name="retention_trash_key">Retention time of notes in trash</string>
    <string name="note_app_header">Cards appearance</string>
    <string name="font_size_card_header">Font size of text</string>
    <string name="theme_color_header">Theme color</string>
    <string name="num_of_lines_header">Number of lines</string>
    <string name="other_app_header">Other</string>
    <string name="reset_font_size_title">Reset font size</string>
    <string name="select_color_app_title">Select color</string>
    <string name="select_color_app_hex_title">Set hex code</string>
    <string name="reset_app_color">Reset color</string>
    <string name="one_size_cards_title">Same cards size</string>
    <string name="one_size_cards_summary">For multi-cards mode</string>
    <string name="one_size_cards_key">Same cards size</string>
    <string name="number_of_lines_key">Number of lines</string>
    <string name="note_card_view_key" translatable="false">note_card_view_key</string>
    <string name="font_size_key" translatable="false">key_font_size</string>
    <string name="app_name" translatable="false">Notes Mini</string>
    <string name="backup_folder_title" translatable="false">Notes Mini Backup</string>
    <string name="folder_text_files_name" translatable="false">Text Files</string>
    <string name="empty_list">Empty</string>
    <string name="no_permissions">No permissions!</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="continue_action">Continue</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on" translatable="false">On</string>
    <string name="off" translatable="false">Off</string>
    <string name="my_email" translatable="false">andreyrochev23@gmail.com</string>
</resources>