<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.loskon.noteminimalism3.ui.prefscreen.PrefScreenCategory
        app:iconSpaceReserved="false"
        app:title="@string/note_app_header">

        <com.loskon.noteminimalism3.app.base.widget.preference.NoteCardViewPreference
            app:allowDividerBelow="false"
            app:key="@string/note_card_view_key" />

    </com.loskon.noteminimalism3.ui.prefscreen.PrefScreenCategory>

    <com.loskon.noteminimalism3.ui.prefscreen.PrefScreenCategory
        app:iconSpaceReserved="false"
        app:title="@string/font_size_card_header">

        <com.loskon.noteminimalism3.app.base.widget.preference.SliderPreference
            android:key="@string/font_size_key"
            app:allowDividerAbove="false"
            app:defaultValue="@integer/title_font_size_int"
            app:sliderMaxValue="40"
            app:sliderMinValue="14" />
    </com.loskon.noteminimalism3.ui.prefscreen.PrefScreenCategory>

    <Preference
        android:title="@string/reset_font_size_title"
        app:iconSpaceReserved="false"
        app:key="@string/reset_font_size_title" />
    <com.loskon.noteminimalism3.ui.prefscreen.PrefScreenCategory
        app:iconSpaceReserved="false"
        app:title="@string/theme_color_header">
        <com.loskon.noteminimalism3.ui.prefscreen.PrefScreenColor
            android:layout="@layout/preference_layout"
            android:title="@string/select_color_app_title"
            app:allowDividerAbove="false"
            app:key="@string/select_color_app_title" />

        <Preference
            android:key="@string/select_color_app_hex_title"
            android:title="@string/select_color_app_hex_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/reset_app_color"
            android:title="@string/reset_app_color"
            app:iconSpaceReserved="false" />

    </com.loskon.noteminimalism3.ui.prefscreen.PrefScreenCategory>

    <com.loskon.noteminimalism3.ui.prefscreen.PrefScreenCategory
        app:iconSpaceReserved="false"
        app:title="@string/num_of_lines_header">
        <com.loskon.noteminimalism3.app.base.widget.preference.SliderPreference
            android:key="@string/number_of_lines_key"
            app:allowDividerAbove="false"
            app:defaultValue="@integer/number_lines"
            app:sliderMaxValue="10"
            app:sliderMinValue="1" />
    </com.loskon.noteminimalism3.ui.prefscreen.PrefScreenCategory>

    <com.loskon.noteminimalism3.ui.prefscreen.PrefScreenCategory
        android:title="@string/other_app_header"
        app:iconSpaceReserved="false">
        <com.loskon.noteminimalism3.app.base.widget.preference.CustomSwitchPreference
            android:key="@string/one_size_cards_key"
            android:layout="@layout/preference_layout"
            android:title="@string/one_size_cards_title"
            app:allowDividerAbove="false"
            app:iconSpaceReserved="false"
            app:summary="@string/one_size_cards_summary" />
    </com.loskon.noteminimalism3.ui.prefscreen.PrefScreenCategory>

</PreferenceScreen>