<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_note"
            android:icon="@drawable/baseline_notes_black_24"
            android:title="@string/menu_navigation_note" />
        <item
            android:id="@+id/nav_item_favorites"
            android:icon="@drawable/baseline_star_black_24"
            android:title="@string/menu_navigation_favorites" />
        <item
            android:id="@+id/nav_item_trash"
            android:icon="@drawable/baseline_delete_black_24"
            android:title="@string/menu_navigation_trash" />
    </group>

    <group>
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/baseline_settings_black_24"
            android:title="@string/menu_navigation_settings" >
        </item>
    </group>
</menu>